prod/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  selector:
    matchLabels:
      type: backend

  replicas: 1
  template:
    metadata:
      labels:
        app: backend
        type: backend

    spec:
      containers:
        - name: backend
          image: szymonwilczewski/tc-backend:Dev-1.0
