prod/frontend-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-cluster-ip
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
